--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*", 
-    "socket.io": "0.9.16"
+    "socket.io": "0.9.16", 
+    "cookie":"*", 
+    "connect":"*"
   }
 }
